feat: show loader while js loading

--- a/index.html
+++ b/index.html
@@ -6,7 +6,9 @@
 		<title>Todos with REST api</title>
 	</head>
 	<body>
-		<div id="root"></div>
+		<div id="root">
+			<h1 style="width: 100%; text-align: center">Loading...</h1>
+		</div>
 		<script type="module" src="/src/main.tsx"></script>
 	</body>
 </html>
